# PartCraft3D_v2

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_shards_trellis2.sh  run_all_xl_shards_trellis2.sh  run_pipeline_minimal.py  run_pipeline_v3_shard_trellis2.sh  run_shard01_xl.sh
.claude/: .nfs000000000cd93a900000ab45  .nfs0000030049273513000284fc
configs/: partversexl_smoke_10_shard00.txt  pipeline_v3_trellis2_flowedit_free_r1024.yaml  pipeline_v3_trellis2_masked_perstep_r512_pad0.yaml  pipeline_v3_trellis2_masked_perstep_r512_pad2.yaml  pipeline_v3_trellis2_masked_perstep_r512_pad7_restore.yaml  pipeline_v3_trellis2_masked_posthoc_r1024.yaml  pipeline_v3_trellis2_masked_posthoc_r512_pad0.yaml  pipeline_v3_trellis2_partversexl_posthoc_no2dqc.yaml  pipeline_v3_trellis2_partversexl_test.yaml  pipeline_v3_trellis2_t1ss_native_r512_pad2_restore.yaml  pipeline_v3_trellis2_t1ss_native_r512_pad4_posthoc_no2dqc.yaml  pipeline_v3_trellis2_t1ss_native_r512_pad4_posthoc_no2dqc_ss_latent_backfill.yaml  pipeline_v3_trellis2_t1ss_native_r512_pad4_texposthoc.yaml  pipeline_v3_trellis2_t1ss_native_r512_pad4_texrestore.yaml  pipeline_v3_trellis2_t1ss_perstep_r512_pad2_restore.yaml
docs/: ARCH.md  edit_status_schema.md  flowedit_trellis_code_plan.md  pxform_v2_del_add_export_runbook.md  training_data_spec_512.md  trellis1_to_trellis2_vinedresser3d_migration.md
partcraft/: __init__.py  edit_types.py
scripts/: backfill_del_add_v2.py  blender_render.py  blender_render_parts.py  build_pass_gallery.py  export_pxform_v2_dataset.py  migrate_edit_status_v3.py  (+5 more)
(+275 files in other folders)
