[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "partcraft3d"
version = "0.1.0"
description = "Industrial-scale data pipeline for generating native 3D editing training pairs from part-level datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # --- Core scientific ---
    "numpy>=1.24",
    "scipy>=1.11",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",

    # --- 3D geometry ---
    "trimesh>=4.0",
    "plyfile>=1.0",
    "open3d>=0.17",
    "scikit-learn>=1.3",

    # --- VLM / API client ---
    "openai>=1.0",

    # --- Visualization ---
    "opencv-python>=4.8",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# TRELLIS 3D editing engine (third_party/trellis)
trellis = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.36",
    "easydict>=1.10",
    "rembg>=2.0",
    "utils3d>=0.6",
    "spconv-cu121>=2.3",
    "igraph>=0.11",
    "xatlas>=0.0.7",
    "pymeshfix>=0.16",
]
render = ["bpy>=3.6"]
dev = ["pytest>=7.0", "ruff>=0.1"]
all = ["partcraft3d[trellis,render,dev]"]

[tool.setuptools.packages.find]
include = ["partcraft*"]
